# fluidsimfoam

./: .flake8  .gitlab-ci.yml  .hgignore  .hgtags  .mdformat.toml  .readthedocs.yml  .semgrepignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  noxfile.py  pyproject.toml
dev/: README.md
doc/: AUTHORS.md  CHANGELOG.md  (+12 more)
doc/examples/fluidsimfoam-cavity/: README.md  pyproject.toml
doc/examples/fluidsimfoam-cavity/src/fluidsimfoam_cavity/: __init__.py  output.py  solver.py
doc/examples/fluidsimfoam-cavity/tests/: test_cavity.py
doc/examples/fluidsimfoam-cavity/tests/saved_cases/cavity/0/: U  p
doc/examples/fluidsimfoam-cavity/tests/saved_cases/cavity/constant/: transportProperties
doc/examples/fluidsimfoam-cavity/tests/saved_cases/cavity/system/: blockMeshDict  controlDict  decomposeParDict  fvSchemes
doc/examples/fluidsimfoam-cbox/: README.md  pyproject.toml
doc/examples/fluidsimfoam-cbox/src/fluidsimfoam_cbox/: __init__.py  output.py  solver.py
doc/examples/fluidsimfoam-cbox/src/fluidsimfoam_cbox/templates/: T.jinja  epsilon.jinja  g.jinja  nut.jinja  tasks.py
doc/examples/fluidsimfoam-cbox/src/fluidsimfoam_cbox/templates/0/: p.jinja
doc/examples/fluidsimfoam-dam/: README.md  pyproject.toml
doc/examples/fluidsimfoam-dam/doc/: tuto_simple.py
doc/examples/fluidsimfoam-dam/src/fluidsimfoam_dam/: __init__.py  output.py  tasks.py
doc/examples/fluidsimfoam-dam/src/fluidsimfoam_dam/templates/: alpha.water.jinja  controlDict.jinja  p_rgh.jinja  sampling.jinja  tasks.py  transportProperties.jinja
doc/examples/fluidsimfoam-dam/src/fluidsimfoam_dam/templates/0/: U.jinja
doc/examples/fluidsimfoam-dam/src/fluidsimfoam_dam/templates/constant/: g.jinja
doc/examples/fluidsimfoam-dam/src/fluidsimfoam_dam/templates/system/: fvSchemes.jinja  fvSolution.jinja  setFieldsDict.jinja
doc/examples/fluidsimfoam-dam/tests/: test_dam.py
doc/examples/fluidsimfoam-dam/tests/saved_cases/case0/constant/: transportProperties
doc/examples/fluidsimfoam-dam/tests/saved_cases/case0/system/: blockMeshDict  controlDict  decomposeParDict  sampling  setFieldsDict
doc/examples/fluidsimfoam-multi-region-snappy/: LICENSE  README.md  pyproject.toml
doc/examples/fluidsimfoam-multi-region-snappy/src/fluidsimfoam_multi_region_snappy/: __init__.py  output.py
doc/examples/fluidsimfoam-multi-region-snappy/src/fluidsimfoam_multi_region_snappy/templates/: decomposeParDict.6.jinja  decomposeParDict.jinja  meshQualityDict.jinja  p.jinja  tasks.py
doc/examples/fluidsimfoam-multi-region-snappy/src/fluidsimfoam_multi_region_snappy/templates/0/: T.jinja  U.jinja  alphat.jinja  epsilon.jinja  k.jinja  p_rgh.jinja  rho.jinja
doc/examples/fluidsimfoam-multi-region-snappy/src/fluidsimfoam_multi_region_snappy/templates/constant/: g.jinja  regionProperties.jinja
doc/examples/fluidsimfoam-multi-region-snappy/src/fluidsimfoam_multi_region_snappy/templates/system/: decomposeParDict.6.jinja  decomposeParDict.jinja  fvSchemes.jinja  meshQualityDict.jinja  snappyHexMeshDict.jinja  surfaceFeatureExtractDict.jinja
doc/examples/fluidsimfoam-multi-region-snappy/tests/: test_multi_region_snappy.py
doc/examples/fluidsimfoam-multi-region-snappy/tests/saved_cases/case0/: Allrun-parallel
doc/examples/fluidsimfoam-multi-region-snappy/tests/saved_cases/case0/0/: T  k  p  rho
doc/examples/fluidsimfoam-multi-region-snappy/tests/saved_cases/case0/constant/: regionProperties
doc/examples/fluidsimfoam-multi-region-snappy/tests/saved_cases/case0/system/: blockMeshDict  controlDict  decomposeParDict  decomposeParDict.mesh  fvSchemes  fvSolution  snappyHexMeshDict  surfaceFeatureExtractDict
doc/examples/fluidsimfoam-phill/: README.md  pyproject.toml
doc/examples/fluidsimfoam-phill/dev/: profile_solver.py
doc/examples/fluidsimfoam-phill/doc/: reproduce_2d_phill.py  reproduce_3d_phill.py  reproduce_sim_2d.py  reproduce_sin_2d.py  reproduce_sinus.py
doc/examples/fluidsimfoam-phill/src/fluidsimfoam_phill/: __init__.py  blockmesh.py  output.py  solver.py
doc/examples/fluidsimfoam-phill/src/fluidsimfoam_phill/templates/: MRFProperties.jinja  alphat.jinja  funkySetFieldsDict.jinja  fvOptions.jinja  fvSchemes.jinja  p_rgh.jinja  tasks.py
doc/examples/fluidsimfoam-phill/tests/: test_phill.py
doc/examples/fluidsimfoam-phill/tests/saved_cases/blockmeshdicts/: blockMeshDict_2d_phill  blockMeshDict_3d_phill
doc/examples/fluidsimfoam-sed/: README.md  pyproject.toml
doc/examples/fluidsimfoam-sed/doc/: tuto_1dbedload.py  tuto_1dbedload_init_in_script.py
doc/examples/fluidsimfoam-sed/src/fluidsimfoam_sed/: __init__.py  output.py  solver.py
doc/examples/fluidsimfoam-sed/tests/: test_sed.py
doc/examples/fluidsimfoam-tgv/: LICENSE  README.md  pyproject.toml  setup.cfg
doc/examples/fluidsimfoam-tgv/src/fluidsimfoam_tgv/: __init__.py  output.py  solver.py
doc/examples/fluidsimfoam-tgv/src/fluidsimfoam_tgv/templates/: U.jinja  blockMeshDict.jinja  p.jinja  tasks.py
mysolvers/fluidsimfoam-sedveg/: LICENSE  README.md  pyproject.toml
mysolvers/fluidsimfoam-sedveg/scripts/: launch.py
mysolvers/fluidsimfoam-sedveg/src/fluidsimfoam_sedveg/: __init__.py  output.py
mysolvers/fluidsimfoam-sedveg/src/fluidsimfoam_sedveg/templates/: tasks.py
mysolvers/fluidsimfoam-sedveg/src/fluidsimfoam_sedveg/templates/0/: Theta.jinja  alphaPlastic.jinja  delta.jinja  nut.b.jinja  omega.b.jinja  omegas.b.jinja  omegaw.b.jinja
mysolvers/fluidsimfoam-sedveg/src/fluidsimfoam_sedveg/templates/constant/: g.jinja  granularRheologyProperties.jinja  interfacialProperties.jinja
mysolvers/fluidsimfoam-sedveg/src/fluidsimfoam_sedveg/templates/system/: fvSchemes.jinja  fvSolution.jinja
mysolvers/fluidsimfoam-sedveg/tests/: test_sedveg.py
mysolvers/fluidsimfoam-sedveg/tests/saved_cases/case0/0/: U.b  U.c  alpha.c  epsilon.b  k.b  ks.b  kw.b  muI  p_rbgh  pa
mysolvers/fluidsimfoam-sedveg/tests/saved_cases/case0/constant/: forceProperties  kineticTheoryProperties  transportProperties  turbulenceProperties.b  twophaseRASProperties
mysolvers/fluidsimfoam-sedveg/tests/saved_cases/case0/system/: blockMeshDict  controlDict
(+282 files in other folders)
