[tool.poetry]
name = "fluidsimfoam"
version = "0.0.2"
description = "Python framework for OpenFOAM"
authors = ["pierre.augier <pierre.augier@univ-grenoble-alpes.fr>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fluidsim-core = "^0.7.2"
inflection = "^0.5.1"
fluiddyn = "^0.5.2"
ipython = "^8.11.0"
pandas = "^1.5.3"
jinja2 = "^3.1.2"
lark = "^1.1.5"
rich = "^13.3.3"
invoke = "^2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
fluidsimfoam-tgv = { path = "./doc/examples/fluidsimfoam-tgv/", develop = true }
fluidsimfoam-cbox = { path = "./doc/examples/fluidsimfoam-cbox/", develop = true }
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
ipdb = "^0.13.13"

[tool.poetry.group.doc.dependencies]
myst-nb = "^0.17.1"
sphinx-inline-tabs = "^2022.1.2b11"
sphinx-copybutton = "^0.5.1"
pydata-sphinx-theme = "^0.13.1"

[tool.poetry.scripts]
fluidsimfoam-info = 'fluidsimfoam.util.console:print_versions'
fluidsimfoam-ipy-load = 'fluidsimfoam.util.console:start_ipython_load_sim'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_first_party = ["fluiddyn", "fluidsim_core", "fluidsimfoam"]
# multi_line_output = 3
profile = "black"
line_length = 82
