[tool.poetry]
name = "fluidsimfoam"
version = "0.0.6"
description = "Python framework for OpenFOAM"
authors = ["pierre.augier <pierre.augier@univ-grenoble-alpes.fr>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fluidsim-core = "^0.7.3"
inflection = "^0.5.1"
fluiddyn = "^0.5.2"
ipython = "^8.14.0"
pandas = "^1.5.3"
jinja2 = "^3.1.2"
lark = "^1.1.5"
rich = "^13.3.3"
invoke = "^2.0.0"
PySide6 = {version = "^6.5.1", optional = true, python = ">=3.9,<3.12"}
jupyterlab = {version = "^3.6.3", optional = true}
jupyterlab_myst = {version = "^1.1.3", optional = true}
jupytext = {version = "^1.14.5", optional = true}
mdformat-myst = {version = "^0.1.4", optional = true}

[tool.poetry.extras]
qt = ["PySide6"]
jupyter = ["jupyterlab", "jupyterlab_myst", "jupytext", "mdformat-myst"]

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
fluidsimfoam-tgv = { path = "./doc/examples/fluidsimfoam-tgv/", develop = true }
fluidsimfoam-cbox = { path = "./doc/examples/fluidsimfoam-cbox/", develop = true }
fluidsimfoam-sed = { path = "./doc/examples/fluidsimfoam-sed/", develop = true }
fluidsimfoam-cavity = { path = "./doc/examples/fluidsimfoam-cavity/", develop = true }
fluidsimfoam-phill = { path = "./doc/examples/fluidsimfoam-phill/", develop = true }
fluidsimfoam-dam = { path = "./doc/examples/fluidsimfoam-dam/", develop = true }
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
ipdb = "^0.13.13"
build = "^0.10.0"
twine = "^4.0.2"

[tool.poetry.group.doc.dependencies]
myst-nb = "^0.17.1"
sphinx-inline-tabs = "^2022.1.2b11"
sphinx-copybutton = "^0.5.1"
pydata-sphinx-theme = "^0.13.1"

[tool.poetry.scripts]
fluidsimfoam-info = 'fluidsimfoam.util.console:print_versions'
fluidsimfoam-ipy-load = 'fluidsimfoam.util.console:start_ipython_load_sim'
fluidsimfoam-initiate-solver = "fluidsimfoam.util.console:initiate_solver"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_first_party = ["fluiddyn", "fluidsim_core", "fluidsimfoam"]
# multi_line_output = 3
profile = "black"
line_length = 82

[tool.coverage.report]
exclude_lines = [
    "raise AssertionError",
    "raise NotImplementedError",
    "raise RuntimeError",
    "raise ValueError",
]
