[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "fluidsimfoam"
version = "0.0.7"
description = "Python framework for OpenFOAM"
authors = [
    {name = "Pierre Augier", email = "pierre.augier@univ-grenoble-alpes.fr"},
]
dependencies = [
    "fluidsim-core<1.0.0,>=0.7.3",
    "inflection<1.0.0,>=0.5.1",
    "fluiddyn<1.0.0,>=0.5.2",
    "ipython<9.0.0,>=8.14.0",
    "pandas<2.0.0,>=1.5.3",
    "jinja2<4.0.0,>=3.1.2",
    "lark<2.0.0,>=1.1.5",
    "rich<14.0.0,>=13.3.3",
    "invoke<3.0.0,>=2.0.0",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = {text = "BSD-3-Clause"}


[project.optional-dependencies]
# incompatibility between PySide6 6.5.1 and Debian 11 (Bullseye)
qt = ["PySide6==6.5.0; python_version < \"3.12\" and python_version >= \"3.9\""]
jupyter = ["jupyterlab<4.0.0,>=3.6.3", "jupyterlab-myst<2.0.0,>=1.1.3", "jupytext<2.0.0,>=1.14.5", "mdformat-myst<1.0.0,>=0.1.4"]
pyvista = ["pyvista<1.0.0,>=0.39.1"]

[project.scripts]
fluidsimfoam-info = "fluidsimfoam.util.console:print_versions"
fluidsimfoam-ipy-load = "fluidsimfoam.util.console:start_ipython_load_sim"
fluidsimfoam-initiate-solver = "fluidsimfoam.util.console:initiate_solver"

[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest<8.0.0,>=7.2.1",
    "-e fluidsimfoam-tgv @ file:///${PROJECT_ROOT}/doc/examples/fluidsimfoam-tgv",
    "-e fluidsimfoam-cbox @ file:///${PROJECT_ROOT}/doc/examples/fluidsimfoam-cbox",
    "-e fluidsimfoam-sed @ file:///${PROJECT_ROOT}/doc/examples/fluidsimfoam-sed",
    "-e fluidsimfoam-cavity @ file:///${PROJECT_ROOT}/doc/examples/fluidsimfoam-cavity",
    "-e fluidsimfoam-phill @ file:///${PROJECT_ROOT}/doc/examples/fluidsimfoam-phill",
    "-e fluidsimfoam-dam @ file:///${PROJECT_ROOT}/doc/examples/fluidsimfoam-dam",
    "-e fluidsimfoam-multi-region-snappy @ file:///${PROJECT_ROOT}/doc/examples/fluidsimfoam-multi-region-snappy",
    "pytest-mock<4.0.0,>=3.10.0",
    "pytest-cov<5.0.0,>=4.0.0",
    "pip",
]
dev = [
    "black<24.0.0,>=23.1.0",
    "flake8<7.0.0,>=6.0.0",
    "isort<6.0.0,>=5.12.0",
    "ipdb<1.0.0,>=0.13.13",
    "build<1.0.0,>=0.10.0",
    "twine<5.0.0,>=4.0.2",
]
doc = [
    "myst-nb<1.0.0,>=0.17.1",
    "sphinx-inline-tabs<2023.0.0,>=2022.1.2b11",
    "sphinx-copybutton<1.0.0,>=0.5.1",
    "pydata-sphinx-theme<1.0.0,>=0.13.1",
    "sphinx-togglebutton<1.0.0,>=0.3.2",
    "pyvista<1.0.0,>=0.39.1",
]

[tool.pdm.build]
includes = []

[tool.isort]
known_first_party = ["fluiddyn", "fluidsim_core", "fluidsimfoam"]
# multi_line_output = 3
profile = "black"
line_length = 82

[tool.coverage.report]
exclude_lines = [
    "raise AssertionError",
    "raise NotImplementedError",
    "raise RuntimeError",
    "raise ValueError",
    "except ImportError",
]
