[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    ]
build-backend = "setuptools.build_meta"

[project]
name = "fluidsimfoam-sedveg"
authors = [
    {name = "Fluidsimfoam developers"},
]
description = "???"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
version = "0.0.1"
dependencies = [
    "fluidsimfoam >= 0.0.7",
]

[project.entry-points."fluidsimfoam.solvers"]
sedveg = "fluidsimfoam_sedveg"

[tool.setuptools.package-data]
fluidsimfoam_sedveg = ["templates"]
