[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    ]
build-backend = "setuptools.build_meta"

[project]
name = "fluidsimfoam-cavity"
authors = [
    {name = "Pierre Augier", email = "pierre.augier@univ-grenoble-alpes.fr"},
]
description = "Lid-driven cavity flow"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
version = "0.0.1"
dependencies = [
    "fluidsimfoam >= 0.0.4",
]

[project.entry-points."fluidsimfoam.solvers"]
cavity = "fluidsimfoam_cavity"

[tool.setuptools.package-data]
fluidsimfoam_cavity = ["templates"]
