[build-system]
requires = [
    "setuptools>=49.5.0",
    "wheel",
    ]
build-backend = "setuptools.build_meta"

[project]
name = "fluidsimfoam-cbox"
authors = [
    {name = "Pierre Augier", email = "pierre.augier@univ-grenoble-alpes.fr"},
]
description = 'simulation of the sidewall convection in a "convective box" with fluidsimfoam'
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
version = "0.0.1"
dependencies = [
    "fluidsimfoam >= 0.0.3",
]

[project.entry-points."fluidsimfoam.solvers"]
cbox = "fluidsimfoam_cbox.solver"
