[build-system]
requires = [
    "setuptools>=49.5.0",
    "wheel",
    ]
build-backend = "setuptools.build_meta"

[project]
name = "fluidsimfoam-phill"
authors = [
    {name = "Pierre Augier", email = "pierre.augier@univ-grenoble-alpes.fr"},
    {name = "Pooria Danaeifar", email = "pouryadanaeifar@gmail.com"},
]
description = 'Simulations of the flow over periodic hills (phill)'
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
version = "0.0.1"
dependencies = [
    "fluidsimfoam >= 0.0.1",
]

[project.entry-points."fluidsimfoam.solvers"]
phill = "fluidsimfoam_phill.solver"
