[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    ]
build-backend = "setuptools.build_meta"

[project]
name = "fluidsimfoam-tgv"
authors = [
    {name = "Pierre Augier", email = "pierre.augier@univ-grenoble-alpes.fr"},
]
description = "Taylor-Green vortex simulations with fluidsimfoam"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
version = "0.0.1"
dependencies = [
    "fluidsimfoam >= 0.0.5",
]

[project.entry-points."fluidsimfoam.solvers"]
tgv = "fluidsimfoam_tgv"

[tool.setuptools.package-data]
fluidsimfoam_tgv = ["templates"]
