[metadata]
name = fluidsimfoam-tgv
description = Taylor-Green vortex
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE

[options]
package_dir=
    =src
packages=find:
install_requires =
    fluidsimfoam >= 0.1.0

[options.entry_points]
fluidsimfoam.solvers =
    tgv = fluidsimfoam_tgv.solver

[options.packages.find]
where=src

# [options.package_data]
# fluidsimfoam_tgv = Snakefile
